  by the browser, if any.  This was solved previously for Windows but not
  for POSIX (forward slash) path names.

- The new calendar pages have now replaced the original calendar.

- LP #449690 Moved text scrubber utility for mailin to core.  Moved mailin
  monitor sub-application to core.

- Removed out of date paster template.  This has been superceded by KarlSample
  project.

3.14 (2009-09-08)
-----------------

- Hide all states in workflow UI that aren't current and have no valid
  exit transitions.

- Fixed error message in error page middleware.

- Merged 'chrism_workflow' branch.

- LP #418695 Bold communities for which logged in user is moderator in "My
  communities" portlet.

- LP #422571 Added convert_entities function to karl.views.utils.  Updated atom
  entry adapters to convert entities in content.

- LP #422572 Made some changes to atom feed based on feed validator
  recommendations: Added "updated" element to feed.  Added rel="self" attribute
  to "link" elements.

- Fixed bug discovered in alert digests--email recipients were not being
  properly passed as a list.  Digests could not have worked at all.  Surprised
  there was no bug report.  (15 users in OSI have alert preferences set to
  digest.)

- LP #422586 Enabled alert digests to send attachments via email.

3.13 (2009-08-26)
-----------------

- Ignore emails with a header that indicates they were auto-generated,
  such as out of office replies.  Like Mailman, Karl now looks for the
  non-standard but widely supported Precedence header, as well as the
  new, standard Auto-Submitted field.

3.12 (2009-08-19)
-----------------

- LP #413137 Export as CSV was producing a unicode header; WSGI only accepts
  byte strings.

- LP #399427 Removed send_alert field from ICommunityContent interface.

- LP #399427 Allow use of default for Alerts utility, making registration
  unnecessary except to shim in a dummy test implementation in unittests.
